workloads/network-test/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: network-test
  labels:
    app.kubernetes.io/name: network-test
    app.kubernetes.io/part-of: k3d-lab
